--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 
 # Redis Configuration (for BullMQ)
 REDIS_URL=redis://localhost:6379
+REDIS_PASSWORD=your-redis-password
 
 # AWS S3 Configuration
 AWS_ACCESS_KEY_ID=your-aws-access-key
