--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ioredis": "^5.7.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "sharp": "^0.34.4",
     "stripe": "^18.5.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.9"
@@ -54,6 +55,7 @@
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.5.2",
+    "@types/sharp": "^0.32.0",
     "@types/uuid": "^11.0.0",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
     "@typescript-eslint/parser": "^8.44.0",
