--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "tsc-alias": "^1.8.8",
     "@aws-sdk/client-s3": "^3.892.0",
     "@aws-sdk/s3-request-presigner": "^3.892.0",
     "@logtail/node": "^0.5.6",
