feat(virtual-staging): add virtual staging feature using ChatGPT and flux-kontext
Implement virtual staging functionality that processes images through ChatGPT for analysis and flux-kontext-pro for image generation. Includes new routes, services, and controllers for handling virtual staging requests, status checks, and user history. Add required dependencies and environment variables for OpenAI and flux-kontext integration.

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,13 @@ STRIPE_PUBLISHABLE_KEY=pk_test_your-publishable-key
 BLACK_FOREST_API_KEY=your-black-forest-api-key
 BLACK_FOREST_API_URL=https://api.bfl.ml
 
+# OpenAI Configuration (for Virtual Staging)
+OPENAI_API_KEY=your-openai-api-key
+
+# Flux Kontext Pro Configuration (for Virtual Staging)
+FLUX_KONTEXT_API_KEY=your-flux-kontext-api-key
+FLUX_KONTEXT_BASE_URL=https://api.flux-kontext.com/v1
+
 
 
 # CORS Configuration
