--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "tsc-alias": "^1.8.8",
     "@aws-sdk/client-s3": "^3.892.0",
     "@aws-sdk/s3-request-presigner": "^3.892.0",
     "@logtail/node": "^0.5.6",
     "@neondatabase/serverless": "^1.0.1",
     "@sentry/node": "^10.12.0",
+    "@types/node-fetch": "^2.6.13",
     "better-auth": "^1.3.12",
     "bullmq": "^5.58.5",
     "cors": "^2.8.5",
@@ -43,8 +43,11 @@
     "ioredis": "^5.7.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
+    "openai": "^5.21.0",
     "sharp": "^0.34.4",
     "stripe": "^18.5.0",
+    "tsc-alias": "^1.8.8",
     "uuid": "^13.0.0",
     "zod": "^4.1.9"
   },
