--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "node": ">=18.0.0"
   },
   "overrides": {
-    "openai>zod": "^4.1.9"
+    "openai": {
+      "zod": "^4.1.9"
+    }
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.892.0",
