--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 NODE_ENV=development
 PORT=3001
 API_URL=http://localhost:3001
+BASE_URL=http://localhost:3001
 
 # Database Configuration (Neon Postgres)
 DATABASE_URL=postgresql://username:password@host:port/database?sslmode=require
@@ -36,7 +37,8 @@ BLACK_FOREST_API_URL=https://api.bfl.ml
 # OpenAI Configuration
 OPENAI_API_KEY=your-openai-api-key
 
-
+# InstantDeco API Configuration
+INSTANT_DECO_API_KEY=your-instant-deco-api-key
 
 # CORS Configuration
 FRONTEND_URL=http://localhost:3000
