--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,7 @@ OPENAI_API_KEY=your-openai-api-key
 
 # InstantDeco API Configuration
 INSTANT_DECO_API_KEY=your-instant-deco-api-key
+INSTANT_DECO_WEBHOOK_URL=http://localhost:3001/api/v1/webhooks/instant-deco
 
 # CORS Configuration
 FRONTEND_URL=http://localhost:3000
